<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/imageViewContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_00" />

    <TextView
        android:id="@+id/mainActivityTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/mainActivityTitle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/teamNameID"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/teamNameEditTextHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTitleID" />

    <TextView
        android:id="@+id/teamNameTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/teamNameTextViewTitle"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameID" />

    <EditText
        android:id="@+id/teamAddressID"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/teamAddressEditTextHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameTextViewID"
        android:autofillHints="false"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/teamAddressTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamAddressTextViewTitle"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamAddressID" />

    <android.widget.Button
        android:id="@+id/btnOpenMapsID"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_design"
        android:fontFamily="sans-serif"
        android:text="@string/btnOpenMaps"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamAddressTextViewID" />

</androidx.constraintlayout.widget.ConstraintLayout>