<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/action_bar"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/setTeamLogoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_01"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo01"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_02"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo02"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_03"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo03"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_04"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo04"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_05"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo05"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:srcCompat="@drawable/ic_logo_00"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/teamlogo00" />
        </TableRow>

    </TableLayout>

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnLoadFromPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/btn_design"
        android:textSize="20sp"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>